{
    "name": "TouchInputActions",
    "maps": [
        {
            "name": "TouchControl",
            "id": "55004afe-614b-4da3-a641-76a0ac93c977",
            "actions": [
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "ed587165-d5a5-4fed-8094-4fa683b653ee",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchStart",
                    "type": "Button",
                    "id": "6b40043a-78ff-4ebd-80ef-b1584ca1becb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchEnd",
                    "type": "Button",
                    "id": "5c889276-593d-4e60-924e-8033d8087062",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "af7c5741-ef1f-4f32-acc9-3a216957c81e",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c946cb75-6cfc-4038-a0d7-908c3aa957f4",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchStart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14c07df7-9f36-4af4-a2ae-d78ae2c79997",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchEnd",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}